--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<img src="https://raw.githubusercontent.com/diya5722/diya5722.github.io/main/banner.svg" alt="Cybersecurity banner">
+![Profile Picture](https://github.com/diya5722/diya5722.github.io/blob/main/profile-picture.png)
+Undergraduate student | Web Developer 
 
+[![LinkedIn Connect](https://img.shields.io/badge/LinkedIn-Connect-blue)](https://www.linkedin.com/in/your-linkedin-profile/)
+vfh-xyye-qwj
+
+## Skills
+HTML
+PYTHON
+C
