--- a/index.html
+++ b/index.html
@@ -1,11 +1,106 @@
-<img src="https://raw.githubusercontent.com/diya5722/diya5722.github.io/main/banner.svg" alt="Cybersecurity banner">
-![Profile Picture](https://github.com/diya5722/diya5722.github.io/blob/main/profile-picture.png)
-Undergraduate student | Web Developer 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-[![LinkedIn Connect](https://img.shields.io/badge/LinkedIn-Connect-blue)](https://www.linkedin.com/in/your-linkedin-profile/)
-vfh-xyye-qwj
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#">Diya Patel</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#resume">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-## Skills
-HTML
-PYTHON
-C
+  <!-- Hero Section -->
+  <section id="hero" class="d-flex align-items-center">
+    <div class="container text-center">
+      <h1>Diya Patel</h1>
+      <p>Web Developer</p>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="bg-light py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Technical Skills</h2>
+          <div class="row">
+            <div class="col-5 mb-3">
+              <div class="skill-box">
+                <i class="fab fa-python"></i>
+                <span>Python</span>
+              </div>
+            </div>
+            <!-- Add more skills here -->
+          </div>
+        </div>
+        <!-- Add another column for additional skills -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Project Section -->
+  <section id="projects">
+    <div class="container">
+      <h2 class="text-center">Projects</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="project-box">
+            <img src="project1.jpg" alt="Project 1">
+            <h3>Project 1</h3>
+            <p>Description of Project 1</p>
+            <div class="project-skills">
+              <span>Python</span>
+              <!-- Add more skills here -->
+            </div>
+            <a href="https://github.com" class="btn btn-primary">View on GitHub</a>
+          </div>
+        </div>
+        <!-- Add another column for additional projects -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="bg-dark text-light py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <ul class="social-icons">
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-github"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 text-right">
+          <p>Created with ❤️ by diya5722</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</body>
+</html>
