--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="#">Diya Patel</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,7 +44,7 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="bg-light py-5">
+  <section id="skills" class="bg-dark py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -53,12 +56,28 @@
                 <span>Python</span>
               </div>
             </div>
-            <!-- Add more skills here -->
+            <div class="col-5 mb-3">
+              <div class="skill-box">
+                <i class="fab fa-java"></i>
+                <span>Java</span>
+              </div>
+            </div>
+            <div class="col-5 mb-3">
+              <div class="skill-box">
+                <i class="fab fa-java"></i>
+                <span>Java</span>
+              </div>
+            </div>
+            <div class="col-5 mb-3">
+              <div class="skill-box">
+                <i class="fab fa-java"></i>
+                <span>Java</span>
+              </div>
+            </div>
           </div>
-        </div>
-        <!-- Add another column for additional skills -->
+        </div><!-- Add another column for additional skills -->
+
       </div>
-    </div>
   </section>
 
   <!-- Project Section -->
@@ -103,4 +122,5 @@
 
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
+
 </html>
