--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                             alt="IMG">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                    <p class="font-weight-normal">Category: Web Templates</p>
+                                <h4>Portfolio</h5>
+                                    <p class="font-weight-normal">Category: Website</p>
                             </span>
                         </span>
                     </a>
@@ -213,8 +213,8 @@
                             alt="IMG">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                    <p class="font-weight-normal">Category: Web Templates</p>
+                                <h4>Legal Compass</h5>
+                                    <p class="font-weight-normal">Category: Application Idea</p>
                             </span>
                         </span>
                     </a>
@@ -225,8 +225,8 @@
                             alt="IMG">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                    <p class="font-weight-normal">Category: Web Templates</p>
+                                <h4>Library Management</h5>
+                                    <p class="font-weight-normal">Category: .Net Project</p>
                             </span>
                         </span>
                     </a>
@@ -330,7 +330,7 @@
         </div> <!-- end of container -->
     </section> <!-- end of section -->
 
-    <!-- testimonial section -->
+    <!-- community section -->
     <section class="section" id="testmonial">
         <div class="container text-center">
             <p class="section-subtitle">What Think Client About Me ?</p>
@@ -339,36 +339,36 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-6">
-                    <div class="testimonial-card">
-                        <div class="testimonial-card-img-holder">
-                            <img src="assets/imgs/avatar2.jpg" class="testimonial-card-img"
+                    <div class="community-card">
+                        <div class="community-card-img-holder">
+                            <img src="assets/imgs/avatar2.jpg" class="community-card-img"
                                 alt="IMG">
                         </div>
-                        <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing
+                        <div class="community-card-body">
+                            <p class="community-card-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing
                                 elit. Eaque doloribus autem aperiam earum nostrum omnis blanditiis corporis perspiciatis
                                 adipisci nihil.</p>
-                            <h6 class="testimonial-card-title">Emily Reb</h6>
+                            <h6 class="community-card-title">Emily Reb</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="testimonial-card">
-                        <div class="testimonial-card-img-holder">
-                            <img src="assets/imgs/avatar3.jpg" class="testimonial-card-img"
+                    <div class="community-card">
+                        <div class="community-card-img-holder">
+                            <img src="assets/imgs/avatar3.jpg" class="community-card-img"
                                 alt="IMG">
                         </div>
-                        <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing
+                        <div class="community-card-body">
+                            <p class="community-card-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing
                                 elit. Eaque doloribus autem aperiam earum nostrum omnis blanditiis corporis perspiciatis
                                 adipisci nihil.</p>
-                            <h6 class="testimonial-card-title">Emily Reb</h6>
+                            <h6 class="community-card-title">Emily Reb</h6>
                         </div>
                     </div>
                 </div>
             </div>
         </div> <!-- end of container -->
-    </section> <!-- end of testimonial section -->
+    </section> <!-- end of community section -->
 
     <!-- contact section -->
     <section class="section" id="contact">
