--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </h1>
             <p class="header-subtitle">FRONTEND WEB DESIGNER, PYTHON & JAVA LOGIC BUILDER</p>
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <button class="btn btn-primary"><a class="link" href="#portfolio"><font color="white">Visit My Works</font></a></button>
         </div>
     </header><!-- end of page header -->
 
@@ -87,7 +87,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/pencil-case.svg"
+                            <img src="assets/imgs/python.svg"
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">PYTHON</h6>
@@ -99,7 +99,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/responsive.svg"
+                            <img src="assets/imgs/java.svg"
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">JAVA</h6>
@@ -111,7 +111,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/toolbox.svg"
+                            <img src="assets/imgs/dsa.svg"
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">DSA</h6>
@@ -123,7 +123,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/analytics.svg"
+                            <img src="assets/imgs/dot-net.svg"
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">.NET</h6>
@@ -139,7 +139,7 @@
               <div class="col-md-6 col-lg-3">
                   <div class="service-card">
                       <div class="body">
-                          <img src="assets/imgs/pencil-case.svg"
+                          <img src="assets/imgs/html5.svg"
                               alt="IMG"
                               class="icon">
                           <h6 class="title">HTML</h6>
@@ -151,7 +151,7 @@
               <div class="col-md-6 col-lg-3">
                   <div class="service-card">
                       <div class="body">
-                          <img src="assets/imgs/responsive.svg"
+                          <img src="assets/imgs/css3.svg"
                               alt="IMG"
                               class="icon">
                           <h6 class="title">CSS</h6>
@@ -163,7 +163,7 @@
               <div class="col-md-6 col-lg-3">
                   <div class="service-card">
                       <div class="body">
-                          <img src="assets/imgs/toolbox.svg"
+                          <img src="assets/imgs/php.svg"
                               alt="IMG"
                               class="icon">
                           <h6 class="title">PHP</h6>
@@ -175,7 +175,7 @@
               <div class="col-md-6 col-lg-3">
                   <div class="service-card">
                       <div class="body">
-                          <img src="assets/imgs/analytics.svg"
+                          <img src="assets/imgs/bootstrap.svg"
                               alt="IMG"
                               class="icon">
                           <h6 class="title">BOOTSTRAP</h6>
@@ -246,7 +246,7 @@
                 <div class="col-md-6">
                     <div class="community-card">
                         <div class="community-card-img-holder">
-                            <img src="assets/imgs/" class="community-card-img"
+                            <img src="assets/imgs/aws.png" class="community-card-img"
                                 alt="IMG">
                         </div>
                         <div class="community-card-body">
@@ -258,7 +258,7 @@
                 <div class="col-md-6">
                     <div class="community-card">
                         <div class="community-card-img-holder">
-                            <img src="assets/imgs/" class="community-card-img"
+                            <img src="assets/imgs/gdsc.png" class="community-card-img"
                                 alt="IMG">
                         </div>
                         <div class="community-card-body">
@@ -270,7 +270,7 @@
             </div>
         </div> <!-- end of container -->
     </section> <!-- end of community section -->
-/*
+
     <!-- contact section -->
     <section class="section" id="contact">
         <div class="container text-center">
@@ -302,16 +302,13 @@
         <footer class="footer">
             <p class="mb-0">Copyright
                 <script>document.write(new Date().getFullYear())</script> &copy; <a
-                    href="http://www.devcrud.com">DevCRUD</a> Distribution <a
-                    href="https://themewagon.com">ThemeWagon</a>
+                    href="http://www.github.com/diya5722">Diya Patel</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+                <a href="https://www.linkedin.com/in/diyapatel5722" class="link"><i class="ti-linkedin"></i></a>
+                <a href="http://www.github.com/diya5722" class="link"><i class="ti-github"></i></a>
+                <a href="http://www.instagram.com/diya5722" class="link"><i class="ti-instagram"></i></a>
+                <a href="http://www.ti-twitter.com" class="link"><i class="ti-twitter-alt"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
@@ -323,8 +320,8 @@
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
-    <!-- Meyawo js -->
-    <script src="assets/js/meyawo.js"></script>
+    <!-- Scripted js -->
+    <script src="assets/js/scripted.js"></script>
 
 </body>
 
