--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">PYTHON</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle">Versatile, high-level programming language with simple syntax and readability.</p>
                         </div>
                     </div>
                 </div>
@@ -103,8 +102,7 @@
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">JAVA</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle">Robust, object-oriented language known for its platform independence and versatility.</p>
                         </div>
                     </div>
                 </div>
@@ -115,8 +113,7 @@
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">DSA</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle">(Data Structures and Algorithms): Fundamental concepts for organizing and processing data efficiently.</p>
                         </div>
                     </div>
                 </div>
@@ -127,8 +124,7 @@
                                 alt="IMG"
                                 class="icon">
                             <h6 class="title">.NET</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle">Framework for building and running software applications on Microsoft Windows.</p>
                         </div>
                     </div>
                 </div>
@@ -143,8 +139,7 @@
                               alt="IMG"
                               class="icon">
                           <h6 class="title">HTML</h6>
-                          <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                              molestias dolorem iste quod.</p>
+                          <p class="subtitle">(Hypertext Markup Language): Standard markup language for creating web pages and web applications.</p>
                       </div>
                   </div>
               </div>
@@ -155,8 +150,7 @@
                               alt="IMG"
                               class="icon">
                           <h6 class="title">CSS</h6>
-                          <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                              molestias dolorem iste quod.</p>
+                          <p class="subtitle">(Cascading Style Sheets): Style sheet language used to define the presentation of HTML documents.</p>
                       </div>
                   </div>
               </div>
@@ -167,8 +161,7 @@
                               alt="IMG"
                               class="icon">
                           <h6 class="title">PHP</h6>
-                          <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                              molestias dolorem iste quod.</p>
+                          <p class="subtitle">Server-side scripting language for web development, widely used in dynamic web content.</p>
                       </div>
                   </div>
               </div>
@@ -179,8 +172,7 @@
                               alt="IMG"
                               class="icon">
                           <h6 class="title">BOOTSTRAP</h6>
-                          <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                              molestias dolorem iste quod.</p>
+                          <p class="subtitle">Front-end framework for developing responsive and mobile-first websites and web applications.</p>
                       </div>
                   </div>
               </div>
