--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
+                    <a href="https://github.com/diya5722/legal-compass" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/folio-2.jpg" class="img-responsive rounded"
                             alt="IMG">
                         <span class="portfolio-card-overlay">
